welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
monkeyTrouble:2: error: ')' expected but ';' found.
  if (aSmile==true; bSmile==true) {
                  ^monkeyTrouble:2: error: ';' expected but ')' found.
  if (aSmile==true; bSmile==true) {
                                ^